# ohtv

./: .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  IMPLEMENTATION_VIA_AGENT.md  README.md  REFERENCE_CLOUD_API.md  REFERENCE_TRAJECTORY_FORMAT_COMPARISON.md  SPEC_REFS_INTERACTION_TYPES.md  WORKLOG.md  WORKLOG_ARCHIVE_2026-05-05.md  WORKLOG_ARCHIVE_2026-05-06.md  WORKLOG_ARCHIVE_2026-05-14.md  WORKLOG_ARCHIVE_2026-05-15.md  WORKLOG_ARCHIVE_2026-05-16.md  WORKLOG_ARCHIVE_2026-05-21.md  WORKLOG_ARCHIVE_2026-05-22.md  WORKLOG_ARCHIVE_2026-05-26.md  WORKLOG_ARCHIVE_2026-05-27.md  WORKLOG_ARCHIVE_2026-05-28.md  WORKLOG_ARCHIVE_2026-05-29.md  WORKLOG_ARCHIVE_2026-05-30.md  WORKLOG_ARCHIVE_2026-06-02.md  WORKLOG_ARCHIVE_2026-06-03.md  WORKLOG_ARCHIVE_2026-06-04.md  WORKLOG_ARCHIVE_2026-06-05.md  WORKLOG_ARCHIVE_2026-06-06.md  WORKLOG_ARCHIVE_2026-06-07.md  WORKLOG_ARCHIVE_2026-07-01.md  pyproject.toml  release-please-config.json
.agents/resources/: orchestration.md
.agents/skills/: manual-test.md
.github/workflows/: enable-orchestrator.yml  pr-review.yml  pr-title.yml  release-please-automerge.yml  release.yml  tests.yml
.pr/: DESIGN_EXTENSIBLE_PROMPTS.md  phase1-infrastructure.md  phase1-task.md  phase2-content-restructure.md  phase2-task.md  phase3-discovery.md  phase3-task.md  phase4-task.md  phase4-transcript.md  phase5-cli.md  phase5-task.md
docs/: DATABASE.md  DESIGN_MCP_SERVER.md  DESIGN_RAG_CITATIONS.md  DESIGN_TEMPORAL_PR_LINKING.md  MANUAL_QA_PLAN_PR18.md  README.md
docs/contributing/: manual-qa-pr18.md  testing.md
docs/design/: conversation-metrics-issues.md  conversation-metrics.md  engagement-threshold-analysis.md  temporal-pr-linking.md
docs/guides/: analysis.md  automation.md  classification.md  concepts.md  customizing-prompts.md  exploration.md  getting-started.md  indexing.md  installation.md  reporting.md  search-and-ask.md  syncing.md
docs/reference/: cli.md  configuration.md  database.md  glossary.md  sync-state-ownership.md  telemetry.md
experiments/: analyze_correlation.py  analyze_interactions.py  objective_extraction_comparison.py
ohtv-utils/: README.md  pyproject.toml
ohtv-utils/src/ohtv_utils/: __init__.py
ohtv-utils/src/ohtv_utils/extraction/: __init__.py  messages.py  refs.py
ohtv-utils/src/ohtv_utils/metrics/: __init__.py  engagement.py  human_input.py
ohtv-utils/tests/: test_engagement.py  test_human_input.py  test_messages.py  test_refs.py
scripts/: analyze_engagement.py  analyze_gaps_with_content.py  chart_velocity.py  engagement_threshold_sweep.py
src/ohtv/: __init__.py  actions.py  classify.py  cli.py  cli_logging.py  config.py  conversations.py  errors.py  exporter.py  fetch_loc.py  filters.py  github_api.py  jit.py  locks.py  logging.py  messages.py  parallel.py  progress.py  sync.py
tests/: conftest.py
tests/fixtures/: __init__.py  conversations.py  database.py
tests/integration/: conftest.py  test_ask_dual_mode.py  test_extra_paths.py  test_gen_objs_batch.py  test_gen_run_aggregate.py
tests/unit/: test_classify.py  test_cli_analyze.py  test_cli_ask_agent_modes.py  test_cli_ask_search_root_dedup.py  test_cli_ask_telemetry.py  test_cli_batch_error_logging.py  test_cli_classify.py  test_cli_db_process_stages.py  test_cli_engagement_display.py  test_cli_engagement_filter.py  test_cli_event_dates_filter.py  test_cli_fetch_loc.py  test_cli_gen.py  test_config.py  (+42 more)
(+232 files in other folders)
