[project]
name = "ohtv"
version = "0.1.0"
description = "OpenHands Trajectory Viewer - CLI tool for viewing and syncing conversation histories"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "JP Shackelford" }]
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "openhands-sdk>=1.16.1",
    "rich>=13.0",
]

[project.scripts]
ohtv = "ohtv.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ohtv"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-httpx>=0.30", "pyyaml>=6.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
