[project]
name = "ohtv-utils"
version = "0.1.0"
description = "Lightweight utilities for extracting content from OpenHands conversation events"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "John-Mason P. Shackelford", email = "john-mason@shackelford.org"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/jpshackelford/ohtv"
Issues = "https://github.com/jpshackelford/ohtv/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/ohtv_utils"]
